data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef signed int int32_t;
typedef unsigned int uint32_t;
struct HdfSListNode {
    struct HdfSListNode *next;
};
struct HdfSList {
    struct HdfSListNode *root;
};
typedef void (*HdfSListDeleter)(struct HdfSListNode *);
typedef _Bool (*HdfSListSearchComparer)(struct HdfSListNode *, uint32_t);
void HdfSListInit(struct HdfSList *list);
struct HdfSListNode *HdfSListSearch(const struct HdfSList *list, uint32_t keyValue, HdfSListSearchComparer comparer);
void HdfSListAdd(struct HdfSList *list, struct HdfSListNode *link);
void HdfSListRemove(struct HdfSList *list, struct HdfSListNode *link);
void HdfSListFlush(struct HdfSList *list, HdfSListDeleter deleter);
struct OsalMutex {
    void *realMutex;
};
int32_t OsalMutexInit(struct OsalMutex *mutex);
int32_t OsalMutexDestroy(struct OsalMutex *mutex);
int32_t OsalMutexLock(struct OsalMutex *mutex);
int32_t OsalMutexUnlock(struct OsalMutex *mutex);
uint32_t HdfStringMakeHashKey(const char *key, uint32_t mask);
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));